# OSCA

./: CMakeLists.txt  build.sh
cmake/: win-toolchain.cmake
lib/: plinklite.c  plinklite.h  sysinfo.c  sysinfo.h
resources/: osca.desktop
script/hpc/: build.sh
script/mac/: build.sh
src/: Module_vqtl_drm_svlm.c  config.h  l0_com.h  l4_osc.cpp
